--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,8 @@
       href="/ai-platform.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Achieve your goals with AI-powered guidance. Get personalized learning plans and career roadmaps to master skills and succeed." />
-    <title>HitchPath-Shop</title>
+    <meta name="description" content="Every pucrhase is a step toward your goals. Invest in learning, growth, and success with curated tools and resources built for achievers." />
+    <title>HitchPath</title>
   </head>
   <body>
     <div id="root"></div>
